--- a/Web/src/server/package.json
+++ b/Web/src/server/package.json
@@ -25,6 +25,7 @@
 		"mongoose": "^8.19.3",
 		"mongoose-slug-generator": "^1.0.4",
 		"mqtt": "^5.14.1",
+		"openmeteo": "^1.2.3",
 		"passport": "^0.7.0",
 		"passport-google-oauth2": "^0.2.0",
 		"passport-jwt": "^4.0.1",
