--- a/Web/src/server/package.json
+++ b/Web/src/server/package.json
@@ -25,6 +25,7 @@
 		"mongoose": "^8.19.3",
 		"mongoose-slug-generator": "^1.0.4",
 		"mqtt": "^5.14.1",
+		"nodemailer": "^7.0.11",
 		"openmeteo": "^1.2.3",
 		"passport": "^0.7.0",
 		"passport-google-oauth2": "^0.2.0",
@@ -35,6 +36,7 @@
 	"devDependencies": {
 		"@types/cors": "^2.8.19",
 		"@types/node": "^24.10.0",
+		"@types/nodemailer": "^7.0.4",
 		"@types/passport": "^1.0.17",
 		"@types/passport-jwt": "^4.0.1",
 		"chalk": "^5.6.2",
